[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Gaoqiang Ji <reticenceji@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.45"
mkdocs-glightbox = "^0.4.0"
mkdocs-meta-descriptions-plugin = "^3.0.0"
pillow = "^11.0.0"
cairosvg = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
